--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,8 @@
  <!--   <string name="app_name">Porora SCB</string>-->
   <!--  <string name="app_name">Mezhuveli SCB</string>-->
 
-    <string name="app_name">Mscore Demo</string>
+  <!--  <string name="app_name">Mscore Demo</string>-->
+    <string name="app_name">Kodiyathoor Bank</string>
 <!--   <string name="app_name">Kuruvattoor Bank</string>-->
 
 <!--    <string name="app_name">Cheranalloor SCB</string>-->
@@ -510,7 +511,7 @@
  <!--  <string name="app_link">https://play.google.com/store/apps/details?id=com.mscore.pantheerankavu&amp;hl=en_IN&amp;gl=US</string>-->
 
 <!--    <string name="app_link">https://play.google.com/store/apps/details?id=com.mscore.atholi</string>-->
-    <string name="app_link">https://play.google.com/store/apps/details?id=com.mscore.kuruvattoor</string>F
+  <!--  <string name="app_link">https://play.google.com/store/apps/details?id=com.mscore.kuruvattoor</string>F-->
    <!-- <string name="app_link">https://play.google.com/store/apps/details?id=com.mscore.thiruvambady_scb</string>-->
 <!--    <string name="app_link">https://play.google.com/store/apps/details?id=com.mscore.cheruvannur</string>-->
 <!--    <string name="app_link">https://play.google.com/store/apps/details?id=com.mscore.kumaramputhoor</string>-->
