--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Perfect Demo</string>
+  <!--  <string name="app_name">Mscore Demo</string>-->
    <!-- <string name="app_name">Parappanangadi CSB</string>-->
  <!--   <string name="app_name"> Calicut Town SCB</string>-->
   <!--  <string name="app_name">Kulathupuzha SCB</string>-->
@@ -19,7 +19,8 @@
    <!-- <string name="app_name">Vayyattupuzha SCB</string>-->
 
 
-  <!--  <string name="app_name">Thekkumbhagam SCB</string>-->
+<!--    <string name="app_name">TELK</string>-->
+ <!-- <string name="app_name">Nadamel SCB</string>-->
 
 <!--    <string name="app_name">Thiruvambady SCB</string>-->
   <!--  <string name="app_name">Cheruvannur SCB</string>-->
@@ -59,7 +60,7 @@
 <!--    <string name="app_name">CSC Bank</string>-->
 <!--    <string name="app_name">Mezhuveli SCB</string> -->
  <!--  <string name="app_name">Kuttikkattoor Urban Society</string>-->
-  <!--  <string name="app_name">Calicut Town Co-Operative Bank</string>-->
+    <string name="app_name">Calicut Town Co-Operative Bank</string>
     <!--<string name="app_name">Kayanna SCB</string>-->
 
 
