Gradle changes in google play services.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">Mscore Demo</string>
-<!--    <string name="app_name">Nadamel SCB</string>-->
+<!--   <string name="app_name">Mscore Demo</string>-->
+<!--<string name="app_name">Nadamel SCB</string>-->
+    <string name="app_name">PERIYA SCB</string>
+   <!-- <string name="app_name">Thodupuzha AST</string>-->
 <!--    <string name="app_name">KpscMob</string>-->
    <!-- <string name="app_name">Parappanangadi CSB</string>-->
 <!--    <string name="app_name">Kalpathur SCB</string>-->
@@ -32,7 +34,7 @@
     <!--<string name="app_name">Kumaramputhur SCB</string>-->
    <!-- <string name="app_name">Kattippara SCB</string>-->
 
-  <!-- <string name="app_name">MCUS</string>-->
+<!-- <string name="app_name">MCUS</string>-->
  <!--   <string name="app_name">Porora SCB</string>-->
   <!--  <string name="app_name">Mezhuveli SCB</string>-->
 
