--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-<!--   <string name="app_name">Mscore Demo</string>-->
+<!--   <string name="app_name">Mscore Demo</string>   -->
+  <string name="app_name">Mscore QA</string>
 <!--<string name="app_name">Nadamel SCB</string>-->
-    <string name="app_name">PERIYA SCB</string>
+<!--    <string name="app_name">PERIYA SCB</string>-->
    <!-- <string name="app_name">Thodupuzha AST</string>-->
 <!--    <string name="app_name">KpscMob</string>-->
    <!-- <string name="app_name">Parappanangadi CSB</string>-->
